--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3549477631198424"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- Open Graph Meta Tags -->
@@ -26,5 +28,16 @@
   <body>
     <div id="root"></div>
     <script src="https://api.tempolabs.ai/proxy-asset?url=https://storage.googleapis.com/tempo-public-assets/error-handling.js"></script>
+<!-- Google Analytics Placeholder -->
+  <script>
+    // Substitua 'UA-XXXXX-Y' pelo seu ID de acompanhamento real do Google Analytics
+    // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    // ga('create', 'UA-XXXXX-Y', 'auto');
+    // ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics Placeholder -->
   </body>
 </html>
