--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div id="root"></div>
     <script src="https://api.tempolabs.ai/proxy-asset?url=https://storage.googleapis.com/tempo-public-assets/error-handling.js"></script>
-<!-- Google Analytics Placeholder -->
+<!-- Google Analytics Placeholder
   <script>
     // Substitua 'UA-XXXXX-Y' pelo seu ID de acompanhamento real do Google Analytics
     // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -45,7 +45,7 @@
     // ga('create', 'UA-XXXXX-Y', 'auto');
     // ga('send', 'pageview');
   </script>
-  <!-- End Google Analytics Placeholder -->
-  <script type='text/javascript' src='//pl26656862.profitableratecpm.com/92/f0/d4/92f0d409aa668f5654e47afb9d28f04d.js'></script>
+  End Google Analytics Placeholder -->
+ <!-- <script type='text/javascript' src='//pl26656862.profitableratecpm.com/92/f0/d4/92f0d409aa668f5654e47afb9d28f04d.js'></script> -->
   </body>
 </html>
